<resources>
    <string name="app_name">E-POS</string>
    <string name="login">Login</string>
    <string name="employee_id">Employee ID</string>
    <string name="device_id">Device ID</string>
    <string name="shop_name">Shop Name</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="nav_sales">Sales</string>
    <string name="nav_items">Items</string>
    <string name="nav_title">Admin</string>
    <string name="nav_reports">Reports</string>
    <string name="nav_receipt">Receipts</string>
    <string name="nav_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_return">Return</string>

    <string name="monthly_reports">Monthly Report</string>
    <string name="daily_report">Daily Report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_refresh">Refresh</string>
    <string name="nav_employee">Employee</string>
    <string name="action_user">User</string>
    <string name="cancel">Cancel</string>
    <string name="action_print">Print</string>
    <string name="register">Register</string>
    <string name="nav_printers">Printers</string>
    <string name="action_sync">Sync</string>


    <string-array name="paper_array">
        <item>80mm</item>

    </string-array>
</resources>



